airflow-vs/vs_for_airflow.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: blue-routing-istio
  namespace: astronomer-blue
spec:
  hosts:
    - "deployments.oleks.aws.astronomer-demo.com"
    - "blue-airflow.oleks.aws.astronomer-demo.com"
  gateways:
    - astronomer/astronomer-gateway-tls # <--- use gw "astronomer-gateway-tls" from "astronomer" ns 
  http:
    - match:
        - uri:
            prefix: /blue/airflow
#      rewrite:
#        uri: /
      route:
        - destination:
            host: blue-webserver
            port:
              number: 8084

    - match:
        - uri:
            prefix: /blue/flower
#      rewrite:
#        uri: /
      route:
        - destination:
            host: blue-flower
            port:
              number: 8084
