airflow-vs/vs_for_dag_server.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: blue-dag-server-istio
  namespace: astronomer-blue
spec:
  hosts:
    - "deployments.oleks.aws.astronomer-demo.com"
  gateways:
    - astronomer/astronomer-gateway-tls # <--- use gw "astronomer-gateway-tls" from "astronomer" ns
  http:
    - match:
        - uri:
            prefix: /blue/dags
#      rewrite:
#        uri: /
      route:
        - destination:
            host: blue-dag-server
            port:
              number: 8084
